--- a/css/style.css
+++ b/css/style.css
@@ -569,3 +569,258 @@ position: relative;
 padding-left: 2%;
 padding-top: 2%;
 }
+#footer_bottom_small{
+position: absolute;
+width: 100%;
+height: 127px;
+left: 0px;
+top: 1798px;
+background: #324950;
+}
+#Tone_bg_1{
+position: absolute;
+width: 100%;
+height: 1648.05px;
+left: 0;
+top: 150px;
+background: #e9e9e9;
+}
+#Tone_bg_2{
+position: absolute;
+width: 76%;
+height: 1332.05px;
+left: 13%;
+top: 66.87px;
+background: url(../img/Union_1.png);
+}
+#Tone_arrow{
+position: absolute;
+width: 24px;
+height: 10px;
+left: 12%;
+top: 25px;
+}
+#Tone_arrow_text{
+position: absolute;
+width: 146px;
+height: 23px;
+left: 14%;
+top: 21px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 400;
+font-size: 14px;
+line-height: 162.7%;
+color: #57984C;
+}
+#Tone_head{
+position: absolute;
+width: 35%;
+height: 231px;
+left: 12%;
+top: 50px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 54px;
+line-height: 142.7%;
+color: #324950;
+}
+#Tone_image{
+position: absolute;
+width: 45%;
+height: 498px;
+left: 50%;
+top: 50px;
+}
+#Tone_red_img{
+position: absolute;
+width: 80px;
+height: 80.04px;
+left: 12%;
+top: 550px;
+}
+#Tone_red_text{
+position: absolute;
+width: 25%;
+height: 86px;
+left: 20%;
+top: 550px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 30px;
+line-height: 142.7%;
+color: #CF2333;
+}
+#Tone_download{
+position: absolute;
+width: 200px;
+height: 55px;
+left: 75%;
+top: 625px;
+}
+#Tone_line{
+position: absolute;
+width: 100%;
+height: 1px;
+left: 0;
+top: 40px;
+}
+#Tone_caption_1{
+position: absolute;
+width: 183px;
+height: 29px;
+left: 12%;
+top: 700px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 142.7%;
+color: #57984C;
+}
+#Tone_text_1{
+position: absolute;
+width: 200px;
+height: 84px;
+left: 12%;
+top: 750px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 162.7%;
+color: #324950;
+}
+#Tone_text_1_1{
+position: absolute;
+width: 250px;
+height: 84px;
+left: 12%;
+top: 775px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 162.7%;
+color: #324950;
+}
+#Tone_caption_2{
+position: absolute;
+width: 183px;
+height: 29px;
+left: 12%;
+top: 900px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 142.7%;
+color: #57984C;
+}
+#Tone_text_2{
+position: absolute;
+width: 35%;
+height: 84px;
+left: 10%;
+top: 950px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 162.7%;
+color: #324950;
+}
+#Tone_caption_3{
+position: absolute;
+width: 183px;
+height: 29px;
+left: 12%;
+top: 1100px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 142.7%;
+color: #57984C;
+}
+#Tone_text_3{
+position: absolute;
+width: 35%;
+height: 84px;
+left: 10%;
+top: 1150px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 162.7%;
+color: #324950;
+}
+#Tone_caption_4{
+position: absolute;
+width: 183px;
+height: 29px;
+left: 50%;
+top: 900px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 142.7%;
+color: #57984C;
+}
+#Tone_text_4{
+position: absolute;
+width: 35%;
+height: 84px;
+left: 48%;
+top: 950px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 162.7%;
+color: #324950;
+}
+#Tone_caption_5{
+position: absolute;
+width: 183px;
+height: 29px;
+left: 50%;
+top: 1100px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 24px;
+line-height: 142.7%;
+color: #57984C;
+}
+#Tone_text_5{
+position: absolute;
+width: 35%;
+height: 84px;
+left: 50%;
+top: 1150px;
+
+font-family: 'Roboto Slab';
+font-style: normal;
+font-weight: 700;
+font-size: 17px;
+line-height: 162.7%;
+color: #324950;
+}
