--- a/css/adaptive.css
+++ b/css/adaptive.css
@@ -314,7 +314,7 @@ position: absolute;
 width: 100%;
 top: 402px;
 height: 2744px;
-background: #FCF0F0;
+background: #DDA0DD;
 }
 #Tall_head{
 position: absolute;
