--- a/css/style.css
+++ b/css/style.css
@@ -399,7 +399,7 @@ position: absolute;
 width: 100%;
 top: 402px;
 height: 2444px;
-background: #FCF0F0;
+background: #DDA0DD;
 }
 #Tall_head{
 position: absolute;
