--- a/css/style.css
+++ b/css/style.css
@@ -1047,3 +1047,8 @@ line-height: 150%;
 text-align: center;
 color: #324950;
 }
+.subscribe-for-push{
+position: absolute;
+left: 37%;
+top: 3220px;
+}
